Sun Apr 27 18:38:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Timer_Queue/TQTDDLL.dsp:
          Set correct DLL name in the Release configuration

Sat Apr 26 21:20:37 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/MEM_Acceptor.cpp (accept): Fixed how the accept acquite the
	  connecting (remote) port number.  Thanks to Steve Huston for
	  calling this to my attention.

Sat Apr 26 12:00:36 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* Kokyu/DSRT_Scheduler.cpp:
	  Corrected calculation for priority range.

	* Kokyu/tests/DSRT_MIF/MIF.cpp:
	  Modifications to set the priority of thread based on the value
	  returned from the scheduler.

Sat Apr 26 08:25:57 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* performance-tests/SCTP/SOCK_SEQPACK_clt.cpp:
	* performance-tests/SCTP/SOCK_STREAM_clt.cpp: Fixed compile
	  errors.

Sat Apr 26 10:42:56 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Reactor_Exceptions_Test.cpp:
          Changed Borland specific defines to Borland and Win32, to fix
          Kylix compile error.

Sat Apr 26 08:50:33 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_borland.GNU:
        * include/makeinclude/rules.lib.GNU:
        * include/makeinclude/rules.bin.GNU:
          Updated Kylix rules so that we don't pass the same options multiple
          times to the linker.

Sat Apr 26 08:47:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_auto_compile.pl:
          Reverted complete change. Too much is now build in first pass.

Fri Apr 25 20:55:00 UTC 2003  Gautam Thaker  <gthaker@atl.lmco.com>

        Please direct all immediate build issues to jcohen@atl.lmco.com
        if problems occur as a result of this check in.  Thank you.

        * ace/SOCK_Connector.h
        * ace/SOCK_SEQPACK_Connector.h

        Added comments to recently added 'protocol'
        parameter for Doxygen.
