@@ -34,7 +34,13 @@ class ACE_MEM_Connector;
  * @brief Defines the methods in the <ACE_MEM_Stream> abstraction.
  *
  * This adds additional wrapper methods atop the <ACE_MEM_IO>
- * class.
+ * class.  Notice that ACE_MEM_Stream can only send messages no bigger
+ * than the underlying MMAP file size minus sizeof (ACE_MEM_SAP_Node).
+ * The size of the MMAP file is default to 4096.  If you need to
+ * increase the size of allowable message ACE_MEM_Stream can handle,
+ * you can set it to
+ * @c ACE_MEM_Acceptor::malloc_options(). minimal_bytes_
+ * before accepting a connection.
  */
 class ACE_Export ACE_MEM_Stream : public ACE_MEM_IO
 {
