@@ -1,3 +1,11 @@
+Sun Apr 27 14:39:00 2003  Nanbor Wang  <nanbor@cs.wustl.edu>
+
+	* ace/MEM_IO.h:
+	* ace/MEM_Stream.h: Added more documentation on the message size
+	  limit a MEM_Stream can handle and how to adjust the limit.
+	  Thanks to Tongzhe Cui <tonycui@yahoo.com> for motivating the
+	  change.
+
 Sun Apr 27 18:38:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * examples/Timer_Queue/TQTDDLL.dsp:
